--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 VITE_OPENAI_API_KEY=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
 VITE_HEYGEN_API_KEY=ZWRjNmFkMjY2N2QzNGExOTljYTc0YjU1ZmMwOTc4YzItMTcxNjM5MTE0NQ==
 VITE_HEYGEN_AVATAR_ID=Tyler-inshirt-20220721-v2
+VITE_HEYGEN_KNOWLEDGE_ID=7877a2e512c24f1fb923bf37cdd9e992
+VITE_HEYGEN_VOICE_ID=1985984feded457b9d013b4f6551ac94
